--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property='og:description' content='SEIKO TOMIHARAのポートフォリオサイトです！'>
   <meta property="og:image" content="img/ogp.png">
   <meta name="description" content="SEIKO TOMIHARAのポートフォリオサイトです！" />
-  <title>Webデザイナー TARO YAMADA ポートフォリオ</title>
+  <title>SEIKO TOMIHARA ポートフォリオ</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
   <link href="css/reset.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/photoswipe/photoswipe.css" media="all" rel="stylesheet" type="text/css" />
@@ -243,7 +243,7 @@
         </div>
       </div>
       <div class="inner">
-        <div class="copyright">Copyright&copy;TARO YAMADA. All Rights Reserved.</>
+        <div class="copyright">Copyright&copy; All Rights Reserved.</>
         </div>
     </footer>
   </div>
