不要表記削除

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </a>
               <div class="card-caption">
                 <div class="card-caption-title">サイト名:Drop-in</div>
-                <div class="card-caption-info">Design / Coding(Responsive) / WordPress</div>
+                <div class="card-caption-info">Design / Coding(Responsive) </div>
                 <div class="card-caption-url"><a class="url-link" href="https://dropin-201906.herokuapp.com/?fbclid=IwAR37aFcoMJ2bxZmOlw5KgdDUAfBsbWh0NmsTlOHtVvxHACJVI84vReo9jAI" target="_blank">Link</a>
                 </div>
               </div>
