--- a/index.html
+++ b/index.html
@@ -23,29 +23,53 @@
   <div id="wrapper">
     <nav id="gnav" class="fixed">
       <ul>
-        <li><a href="#works">PORTFOLIO</a></li>
-        <li><a href="#feature">FEATURE</a></li>
         <li><a href="#about">ABOUT</a></li>
+        <li><a href="#works">PORTFOLIO</a></li>
         <li><a href="#skill">SKILL</a></li>
-        <!-- <li><a href="#contact">CONTACT</a></li> -->
+        <li><a href="#contact">CONTACT</a></li>
       </ul>
     </nav>
     <header id="header">
       <div class="inner">
         <h1 class="logo">
+            <img src="../img/manuru1.jpg" alt="">
+            <div class="gradation"></div>
           <div class="logo-title">SEIKO TOMIHARA</div>
           <div class="logo-desc">PORTFOLIO</div>
+
         </h1>
       </div>
     </header>
     <main id="contents">
+      <section class="section" id="about">
+          <div class="inner">
+            <div class="section-title-area">
+              <h2 class="section-title">ABOUT</h2>
+              <div class="section-intro">
+                こんにちは！
+              </div>
+            </div>
+            <div class="section-body">
+              <div class="section-image">
+                <img class="lazyload fadein" data-src="img/mii.jpg" alt="">
+              </div>
+              <div class="section-desc">
+                <div class="section-text">
+                  こんにちは！とみはらせいこです。<br>IT系の専門学校を卒業し、東京のサーバホスティング会社で４年勤めたあと、沖縄にUターンしシステム開発会社にて業務システム開発を８年経験しました。<br>その後、WEBプログラミングスクールで学び、Web制作に興味を持ち自己学習を続けています。Webに関しては業務未経験ですが、これまでの経験を活かしフロントエンジニアを目指しています！人を幸せにするモノづくりをしていきます。どうぞよろしくお願いいたします。<br>
+                  ※画像は今年14歳の愛猫です。
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
       <section class="section" id="works">
         <div class="inner">
           <div class="section-title-area">
             <h2 class="section-title">PORTFOLIO</h2>
             <div class="section-intro">
               <div class="section-text">
-                Webポートフォリオです。<br class="pc">練習用の架空サイト（ファーストビューのみ）も含んでおります。
+                練習用の架空サイトです。
               </div>
             </div>
           </div>
@@ -55,19 +79,20 @@
                 <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/Drop-in.PNG" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名:Drop-in</div>
+                <div class="card-caption-title">料理注文サイト<br>(HTML/CSS/JavaScript/Python/SQLite)</div>
                 <div class="card-caption-info">Design / Coding(Responsive) </div>
                 <div class="card-caption-url"><a class="url-link" href="https://dropin-201906.herokuapp.com/?fbclid=IwAR37aFcoMJ2bxZmOlw5KgdDUAfBsbWh0NmsTlOHtVvxHACJVI84vReo9jAI" target="_blank">Link</a>
                 </div>
               </div>
             </div>
             <div class="card">
-              <a href="img/portfolio2.PNG" data-size="960x720" class="card-image hover-action-01">
+              <a href="img/portfolio2.PNG" data-size="700x520" class="card-image hover-action-01">
                 <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/portfolio2.PNG" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名:観光サイト</div>
-                <div class="card-caption-info">Design / Coding(Responsive) </div>
+                <div class="card-caption-title">美ら海水族館をテーマにしたサイト<br>(HTML/CSS/JavaScript)</div>
+                <div class="card-caption-info">Design / Coding(Responsive) <br>
+                </div>
                 <div class="card-caption-url"><a class="url-link" href="https://seiko888.github.io/seiko/" target="_blank">Link</a>
                 </div>
               </div>
@@ -111,7 +136,7 @@
           </div>
         </div>
       </section>
-      <section class="section" id="feature">
+      <!-- <section class="section" id="feature">
         <div class="inner">
           <div class="section-title-area">
             <h2 class="section-title">FEATURE</h2>
@@ -137,28 +162,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="section" id="about">
-        <div class="inner">
-          <div class="section-title-area">
-            <h2 class="section-title">ABOUT</h2>
-            <div class="section-intro">
-              こんにちは！
-            </div>
-          </div>
-          <div class="section-body">
-            <div class="section-image">
-              <img class="lazyload fadein" data-src="img/mii.jpg" alt="">
-            </div>
-            <div class="section-desc">
-              <div class="section-text">
-                こんにちは！とみはらせいこと申します。<br>IT系の専門学校を卒業し、東京のサーバホスティング会社で４年勤めたあと、沖縄にUターンしシステム開発会社にて業務システム開発を８年経験しました。<br>その後、WEBプログラミングスクールで学び、Web制作に興味を持ち自己学習を続けています。Webに関しては業務未経験ですが、これまでの経験を活かしフロントエンジニアを目指しています！どうぞよろしくお願いいたします。<br>
-                ※画像は今年14歳の愛猫です。
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      </section> -->
+
       <section class="section" id="skill">
         <div class="inner">
           <div class="section-title-area">
@@ -191,7 +196,7 @@
                   <div class="rate rate2"></div>
                 </div>
                 <div class="section-text">
-                  簡単なコーディングができます。使用エディタはVisualStudioCodeです。</div>
+                  簡単なコーディングができます。</div>
               </div>
             </div>
             <div class="card">
@@ -217,7 +222,7 @@
                   <div class="rate rate1"></div>
                 </div>
                 <div class="section-text">
-                  学習中です。</div>
+                  基本的な操作ができます。簡単な固定ページ作成ができます。</div>
               </div>
             </div>
             <div class="card">
@@ -230,7 +235,7 @@
                   <div class="rate rate1"></div>
                 </div>
                 <div class="section-text">
-                  学習中です。</div>
+                  基本的な操作ができます。</div>
               </div>
             </div>
           </div>
